[package]
name = "packagemanager"
version = "0.1.0"
edition = "2021"
lto = true

[dependencies]
clap = { version = "4.5.13", features = ["derive"] }
fetch-data = "0.2.0"
indicatif = "0.17.8"
serde = { version = "1.0.204", features = ["derive"] }
serde_yaml = "0.9.34"
filedb-ng = {version = "0.1.0", path = "filedb"}
anyhow = "1.0.86"
derive_more = { version = "1.0.0", features = ["as_ref"] }
toml = "0.8.19"
compress-tools = "0.15.1"

[workspace]
members = ["filedb"]

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
