[package]
name = "filedb"
description = "Database that's using files"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.205", features = ["derive"] }
toml = "0.8.19"

[[example]]
name = "create"
path = "examples/create.rs"

[[example]]
name = "open"
path = "examples/open.rs"

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
